@@ -44,6 +44,9 @@ threads = 5
 ; Idle timeout in seconds for HTTP connect sessions before closing the connection
 idle = 30
 
+; Timeout in seconds for connections before giving up
+socktimeout = 5
+
 ; Enable logging
 ;   Logs are written to the same directory that Px is run and are over-written on startup
 log = 0
